--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3",
-    "eslint": "^9.22.0",
-    "eslint-config-next": "^15.2.2"
+    "@types/react-dom": "19.0.3"
   }
 }
